--- a/inventory/templates/inventory/product_list_new_icons.html
+++ b/inventory/templates/inventory/product_list_new_icons.html
@@ -64,6 +64,8 @@
                                         {% if sort_by == '-created_at' %}selected{% endif %}>الأحدث</option>
                                 <option value="name" {% if sort_by == 'name' %}selected{% endif %}>الاسم (أ-ي)</option>
                                 <option value="-name" {% if sort_by == '-name' %}selected{% endif %}>الاسم (ي-أ)</option>
+                                <option value="code" {% if sort_by == 'code' %}selected{% endif %}>الكود (تصاعدي)</option>
+                                <option value="-code" {% if sort_by == '-code' %}selected{% endif %}>الكود (تنازلي)</option>
                                 <option value="price" {% if sort_by == 'price' %}selected{% endif %}>السعر (تصاعدي)</option>
                                 <option value="-price" {% if sort_by == '-price' %}selected{% endif %}>السعر (تنازلي)</option>
                             </select>
