--- a/inventory/templates/inventory/variants/bulk_price_update.html
+++ b/inventory/templates/inventory/variants/bulk_price_update.html
@@ -100,7 +100,7 @@
                                                                        checked>
                                                             </td>
                                                             <td>
-                                                                <strong>{{ variant.full_code }}</strong>
+                                                                <strong>{{ variant.full_code_display }}</strong>
                                                             </td>
                                                             <td>
                                                                 {% if variant.color %}
