--- a/inventory/templates/inventory/variants/variant_stock_update.html
+++ b/inventory/templates/inventory/variants/variant_stock_update.html
@@ -32,7 +32,7 @@
                         <div class="alert alert-info mb-4">
                             <div class="row align-items-center">
                                 <div class="col-md-6">
-                                    <strong>المتغير:</strong> {{ variant.full_code }}
+                                    <strong>المتغير:</strong> {{ variant.full_code_display }}
                                     {% if variant.color %}
                                         {% if variant.color.hex_code %}
                                             <span class="color-swatch ms-2"
