--- a/inventory/templates/inventory/variants/variant_detail.html
+++ b/inventory/templates/inventory/variants/variant_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}{{ variant.full_code }} - تفاصيل المتغير{% endblock %}
+{% block title %}{{ variant.full_code_display }} - تفاصيل المتغير{% endblock %}
 {% block content %}
     <div class="container-fluid">
         <!-- Breadcrumb -->
@@ -19,7 +19,7 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
             <div>
                 <h2 class="mb-1">
-                    <span class="badge bg-primary me-2">{{ variant.full_code }}</span>
+                    <span class="badge bg-primary me-2">{{ variant.full_code_display }}</span>
                     {% if variant.color %}
                         {% if variant.color.hex_code %}
                             <span class="color-swatch"
@@ -66,7 +66,7 @@
                             <tr>
                                 <th width="40%">الكود الكامل:</th>
                                 <td>
-                                    <code class="fs-5">{{ variant.full_code }}</code>
+                                    <code class="fs-5">{{ variant.full_code_display }}</code>
                                 </td>
                             </tr>
                             <tr>
