--- a/inventory/templates/inventory/variants/base_product_list.html
+++ b/inventory/templates/inventory/variants/base_product_list.html
@@ -111,6 +111,11 @@
                     <i class="fas fa-tags me-1"></i>
                     طباعة كل البطاقات
                 </button>
+                <a href="{% url 'inventory:product_set_list' %}"
+                   class="btn btn-success">
+                    <i class="fas fa-layer-group me-1"></i>
+                    مجموعات المنتجات
+                </a>
                 <a href="{% url 'inventory:base_product_create' %}"
                    class="btn btn-primary">
                     <i class="fas fa-plus me-1"></i>
